Navbar: Fix ID scrolling: The content was hidden behind the Navbar because the page content was scrolling to the top of the screen.

--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -14,3 +14,12 @@
     }
   }
 }
+
+*[id]::before {
+  display: block;
+  content: " ";
+  margin-top: -7rem;
+  height: 7rem;
+  visibility: hidden;
+  pointer-events: none;
+}
